--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: description
-Title: Parse DESCRIPTION files
+Title: Manipulate DESCRIPTION Files
 Version: 1.0.0
 Author: Gabor Csardi
 Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
-Description: Parse DESCRIPTION files
+Description: Tools to read, write, create, and manipulate DESCRIPTION files.
+    It is intented for packages that create or manipulate other packages.
 License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/metacran/description
 BugReports: https://github.com/metacran/description/issues
 Suggests: 
     testthat
+Imports:
+    R6
