--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/metacran/description
 BugReports: https://github.com/metacran/description/issues
-Suggests: 
+Suggests:
     testthat
 Imports:
     R6
+RoxygenNote: 4.1.1.9001
