Fix coverage calculation, needs covr

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 
 install:
   - ./pkg-build.sh install_deps
+  - ./pkg-build.sh install_github jimhester/covr
 
 script:
   - ./pkg-build.sh run_tests
