Most of the Authors@R API
Some pieces are still coming.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(check_field,DescriptionType)
 S3method(check_field,DescriptionURL)
 S3method(check_field,DescriptionURLList)
 S3method(check_field,DescriptionVersion)
+S3method(format,DescriptionAuthorsAtR)
 S3method(format,DescriptionCollate)
 S3method(format,DescriptionDependencyList)
 S3method(format,DescriptionField)
@@ -35,3 +36,4 @@ export(cran_valid_fields)
 export(dep_types)
 export(description)
 importFrom(R6,R6Class)
+importFrom(utils,as.person)
