Fix imports and and a missing argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,3 +37,5 @@ export(dep_types)
 export(description)
 importFrom(R6,R6Class)
 importFrom(utils,as.person)
+importFrom(utils,person)
+importFrom(utils,tail)
