--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/metacran/description
 BugReports: https://github.com/metacran/description/issues
+Depends: R (>= 3.2.0)
 Suggests:
     testthat,
     whoami
