Colored output, closes #5

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,9 @@ export(cran_valid_fields)
 export(dep_types)
 export(description)
 importFrom(R6,R6Class)
+importFrom(crayon,blue)
+importFrom(crayon,red)
+importFrom(crayon,strip_style)
 importFrom(utils,as.person)
 importFrom(utils,person)
 importFrom(utils,tail)
