--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ BugReports: https://github.com/metacran/description/issues
 Depends: R (>= 3.2.0)
 Suggests:
     testthat,
-    whoami
+    whoami,
 Imports:
-    R6
+    R6,
+    crayon
 RoxygenNote: 5.0.1
