--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,12 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/metacran/description
 BugReports: https://github.com/metacran/description/issues
-Depends: R (>= 3.2.0)
+Depends:
+    R (>= 3.2.0)
 Suggests:
     testthat,
     whoami,
 Imports:
     R6,
     crayon
-RoxygenNote: 5.0.1
+RoxygenNote: 5.0.0.9000
