--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,34 @@ export(check_field)
 export(cran_ascii_fields)
 export(cran_valid_fields)
 export(dep_types)
+export(desc_add_author)
+export(desc_add_me)
+export(desc_add_role)
+export(desc_add_to_collate)
+export(desc_change_maintainer)
+export(desc_del)
+export(desc_del_author)
+export(desc_del_collate)
+export(desc_del_dep)
+export(desc_del_deps)
+export(desc_del_from_collate)
+export(desc_del_role)
+export(desc_fields)
+export(desc_get)
+export(desc_get_author)
+export(desc_get_authors)
+export(desc_get_collate)
+export(desc_get_deps)
+export(desc_get_maintainer)
+export(desc_has_fields)
+export(desc_normalize)
+export(desc_print)
+export(desc_set)
+export(desc_set_authors)
+export(desc_set_collate)
+export(desc_set_dep)
+export(desc_set_deps)
+export(desc_validate)
 export(description)
 importFrom(R6,R6Class)
 importFrom(crayon,blue)
