--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,11 @@ S3method(format,DescriptionAuthorsAtR)
 S3method(format,DescriptionCollate)
 S3method(format,DescriptionDependencyList)
 S3method(format,DescriptionField)
+S3method(to_latex,DescriptionAuthorsAtR)
+S3method(to_latex,DescriptionCollate)
+S3method(to_latex,DescriptionField)
+S3method(to_latex,character)
+S3method(to_latex,person)
 export(check_field)
 export(cran_ascii_fields)
 export(cran_valid_fields)
