--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(desc_get_maintainer)
 export(desc_has_fields)
 export(desc_normalize)
 export(desc_print)
+export(desc_reorder_fields)
 export(desc_set)
 export(desc_set_authors)
 export(desc_set_collate)
