--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ S3method(format,DescriptionField)
 S3method(to_latex,DescriptionAuthorsAtR)
 S3method(to_latex,DescriptionCollate)
 S3method(to_latex,DescriptionField)
+S3method(to_latex,DescriptionURL)
+S3method(to_latex,DescriptionURLList)
 S3method(to_latex,character)
 S3method(to_latex,person)
 export(check_field)
