--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(desc_set_authors)
 export(desc_set_collate)
 export(desc_set_dep)
 export(desc_set_deps)
+export(desc_to_latex)
 export(desc_validate)
 export(description)
 importFrom(R6,R6Class)
