--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,13 +30,13 @@ S3method(format,DescriptionAuthorsAtR)
 S3method(format,DescriptionCollate)
 S3method(format,DescriptionDependencyList)
 S3method(format,DescriptionField)
-S3method(to_latex,DescriptionAuthorsAtR)
-S3method(to_latex,DescriptionCollate)
-S3method(to_latex,DescriptionField)
-S3method(to_latex,DescriptionURL)
-S3method(to_latex,DescriptionURLList)
-S3method(to_latex,character)
-S3method(to_latex,person)
+S3method(toLatex,DescriptionAuthorsAtR)
+S3method(toLatex,DescriptionCollate)
+S3method(toLatex,DescriptionField)
+S3method(toLatex,DescriptionURL)
+S3method(toLatex,DescriptionURLList)
+S3method(toLatex,character)
+S3method(toLatex,person)
 export(check_field)
 export(cran_ascii_fields)
 export(cran_valid_fields)
@@ -80,3 +80,4 @@ importFrom(crayon,strip_style)
 importFrom(utils,as.person)
 importFrom(utils,person)
 importFrom(utils,tail)
+importFrom(utils,toLatex)
