--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - ./pkg-build.sh install_deps
-  - ./pkg-build.sh install_github jimhester/covr hadley/testthat#443
+  - ./pkg-build.sh install_github jimhester/covr
 
 script:
   - ./pkg-build.sh run_tests
