New method to_latex() (#17)
* decl

* separate file

* fix LaTeX sanitation

* don't write 'parsed'

* first try for a test

* desired state

* need more-than-bleeding-edge testthat

* better state

* improve sanitation

* mailto url

* more special characters

* format URLs

* actually test multiple URLs

* non-oo

* force line break after `Authors@R`

* Use utils::toLatex()

- For internal functions
- Output is S3 class "Latex" which will be formatted by utils:::print.Latex() on output

* don't need testthat PR anymore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,13 @@ S3method(format,DescriptionAuthorsAtR)
 S3method(format,DescriptionCollate)
 S3method(format,DescriptionDependencyList)
 S3method(format,DescriptionField)
+S3method(toLatex,DescriptionAuthorsAtR)
+S3method(toLatex,DescriptionCollate)
+S3method(toLatex,DescriptionField)
+S3method(toLatex,DescriptionURL)
+S3method(toLatex,DescriptionURLList)
+S3method(toLatex,character)
+S3method(toLatex,person)
 export(check_field)
 export(cran_ascii_fields)
 export(cran_valid_fields)
@@ -63,6 +70,7 @@ export(desc_set_authors)
 export(desc_set_collate)
 export(desc_set_dep)
 export(desc_set_deps)
+export(desc_to_latex)
 export(desc_validate)
 export(description)
 importFrom(R6,R6Class)
@@ -72,3 +80,4 @@ importFrom(crayon,strip_style)
 importFrom(utils,as.person)
 importFrom(utils,person)
 importFrom(utils,tail)
+importFrom(utils,toLatex)
