--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Suggests:
     testthat,
     whoami
 Imports:
+    utils,
     R6,
     crayon
 RoxygenNote: 5.0.1
@@ -27,6 +28,7 @@ Collate:
     'deps.R'
     'description.R'
     'encoding.R'
+    'latex.R'
     'non-oo-api.R'
     'read.R'
     'str.R'
