--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: description
 Title: Manipulate DESCRIPTION Files
 Version: 1.0.0
-Author: Gabor Csardi
+Authors@R: c(
+    person("Gabor", "Csardi",, "csardi.gabor@gmail.com", role = c("aut", "cre")),
+    person("Kirill", "Müller", role = c("aut")))
 Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
 Description: Tools to read, write, create, and manipulate DESCRIPTION files.
     It is intented for packages that create or manipulate other packages.
