Import utils::packageName

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(crayon,blue)
 importFrom(crayon,red)
 importFrom(crayon,strip_style)
 importFrom(utils,as.person)
+importFrom(utils,packageName)
 importFrom(utils,person)
 importFrom(utils,tail)
 importFrom(utils,toLatex)
