--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: description
+Package: desc
 Title: Manipulate DESCRIPTION Files
 Version: 1.0.0
 Authors@R: c(
@@ -9,8 +9,8 @@ Description: Tools to read, write, create, and manipulate DESCRIPTION files.
     It is intended for packages that create or manipulate other packages.
 License: MIT + file LICENSE
 LazyData: true
-URL: https://github.com/metacran/description
-BugReports: https://github.com/metacran/description/issues
+URL: https://github.com/metacran/desc
+BugReports: https://github.com/metacran/desc/issues
 Depends:
     R (>= 3.2.0)
 Suggests:
