--- a/inst/DESCRIPTION
+++ b/inst/DESCRIPTION
@@ -9,9 +9,10 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/metacran/description
 BugReports: https://github.com/metacran/description/issues
-Suggests:
+Suggests: 
     testthat,
-    whoami
-Imports:
+    whoami,
+    newpackage
+Imports: 
     R6
 RoxygenNote: 5.0.0
