--- a/inst/DESCRIPTION
+++ b/inst/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: description
 Title: Manipulate DESCRIPTION Files
 Version: 1.0.0
-Author: Gabor Csardi
-Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
+Author: Gábor Csárdi
+Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
 Description: Tools to read, write, create, and manipulate DESCRIPTION files.
     It is intented for packages that create or manipulate other packages.
 License: MIT + file LICENSE
@@ -16,3 +16,4 @@ Suggests:
 Imports: 
     R6
 RoxygenNote: 5.0.0
+Encoding: UTF-8
