--- a/tests/testthat/files/DESCRIPTION
+++ b/tests/testthat/files/DESCRIPTION
@@ -1,16 +1,17 @@
-Package: description
+Package: desc
 Title: Manipulate DESCRIPTION Files
 Version: 1.0.0
-Author: Gabor Csardi
-Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
+Author: Gábor Csárdi
+Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
 Description: Tools to read, write, create, and manipulate DESCRIPTION
     files. It is intented for packages that create or manipulate other
     packages.
 License: MIT + file LICENSE
-URL: https://github.com/metacran/description
-BugReports: https://github.com/metacran/description/issues
+URL: https://github.com/metacran/desc
+BugReports: https://github.com/metacran/desc/issues
 Imports:
     R6
 Suggests:
     testthat
 VignetteBuilder: knitr
+Encoding: UTF-8
