URL helpers, closes #26

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,9 @@ export(desc_add_author)
 export(desc_add_me)
 export(desc_add_role)
 export(desc_add_to_collate)
+export(desc_add_urls)
 export(desc_change_maintainer)
+export(desc_clear_urls)
 export(desc_del)
 export(desc_del_author)
 export(desc_del_collate)
@@ -53,6 +55,7 @@ export(desc_del_dep)
 export(desc_del_deps)
 export(desc_del_from_collate)
 export(desc_del_role)
+export(desc_del_urls)
 export(desc_fields)
 export(desc_get)
 export(desc_get_author)
@@ -60,6 +63,7 @@ export(desc_get_authors)
 export(desc_get_collate)
 export(desc_get_deps)
 export(desc_get_maintainer)
+export(desc_get_urls)
 export(desc_has_fields)
 export(desc_normalize)
 export(desc_print)
@@ -70,6 +74,7 @@ export(desc_set_authors)
 export(desc_set_collate)
 export(desc_set_dep)
 export(desc_set_deps)
+export(desc_set_urls)
 export(desc_to_latex)
 export(desc_validate)
 export(description)
