Add get_or_fail() method, closes #27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(desc_get_authors)
 export(desc_get_collate)
 export(desc_get_deps)
 export(desc_get_maintainer)
+export(desc_get_or_fail)
 export(desc_get_urls)
 export(desc_has_fields)
 export(desc_normalize)
