Helpers for the 'Remotes' field

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,10 +43,12 @@ export(cran_valid_fields)
 export(dep_types)
 export(desc_add_author)
 export(desc_add_me)
+export(desc_add_remotes)
 export(desc_add_role)
 export(desc_add_to_collate)
 export(desc_add_urls)
 export(desc_change_maintainer)
+export(desc_clear_remotes)
 export(desc_clear_urls)
 export(desc_del)
 export(desc_del_author)
@@ -54,6 +56,7 @@ export(desc_del_collate)
 export(desc_del_dep)
 export(desc_del_deps)
 export(desc_del_from_collate)
+export(desc_del_remotes)
 export(desc_del_role)
 export(desc_del_urls)
 export(desc_fields)
@@ -64,6 +67,7 @@ export(desc_get_collate)
 export(desc_get_deps)
 export(desc_get_maintainer)
 export(desc_get_or_fail)
+export(desc_get_remotes)
 export(desc_get_urls)
 export(desc_has_fields)
 export(desc_normalize)
@@ -75,6 +79,7 @@ export(desc_set_authors)
 export(desc_set_collate)
 export(desc_set_dep)
 export(desc_set_deps)
+export(desc_set_remotes)
 export(desc_set_urls)
 export(desc_to_latex)
 export(desc_validate)
