--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(check_field)
 export(cran_ascii_fields)
 export(cran_valid_fields)
 export(dep_types)
+export(desc)
 export(desc_add_author)
 export(desc_add_me)
 export(desc_add_remotes)
