Start using assertions, also fixes #29
Assertions added to description.R. Rest coming later.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,8 @@ export(desc_to_latex)
 export(desc_validate)
 export(description)
 importFrom(R6,R6Class)
+importFrom(assertthat,"on_failure<-")
+importFrom(assertthat,assert_that)
 importFrom(crayon,blue)
 importFrom(crayon,red)
 importFrom(crayon,strip_style)
