--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(desc_get_maintainer)
 export(desc_get_or_fail)
 export(desc_get_remotes)
 export(desc_get_urls)
+export(desc_has_dep)
 export(desc_has_fields)
 export(desc_normalize)
 export(desc_print)
