--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(desc_add_remotes)
 export(desc_add_role)
 export(desc_add_to_collate)
 export(desc_add_urls)
+export(desc_bump_version)
 export(desc_change_maintainer)
 export(desc_clear_remotes)
 export(desc_clear_urls)
@@ -70,6 +71,7 @@ export(desc_get_maintainer)
 export(desc_get_or_fail)
 export(desc_get_remotes)
 export(desc_get_urls)
+export(desc_get_version)
 export(desc_has_dep)
 export(desc_has_fields)
 export(desc_normalize)
@@ -83,6 +85,7 @@ export(desc_set_dep)
 export(desc_set_deps)
 export(desc_set_remotes)
 export(desc_set_urls)
+export(desc_set_version)
 export(desc_to_latex)
 export(desc_validate)
 export(description)
