Find package root by default, closes #35

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     assertthat,
     utils,
     R6,
-    crayon
+    crayon,
+    rprojroot
 Encoding: UTF-8
 RoxygenNote: 5.0.1.9000
 Collate:
