--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,8 @@ importFrom(assertthat,assert_that)
 importFrom(crayon,blue)
 importFrom(crayon,red)
 importFrom(crayon,strip_style)
+importFrom(rprojroot,find_root)
+importFrom(rprojroot,is_r_package)
 importFrom(utils,as.person)
 importFrom(utils,packageName)
 importFrom(utils,person)
