Need to import untar & unzip from utils

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,3 +102,5 @@ importFrom(utils,packageName)
 importFrom(utils,person)
 importFrom(utils,tail)
 importFrom(utils,toLatex)
+importFrom(utils,untar)
+importFrom(utils,unzip)
