--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/r-pkgs/desc/issues
 Depends:
     R (>= 3.2.0)
 Suggests:
+    covr,
     testthat,
     whoami,
     withr
