--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: r
 sudo: false
 cache: packages
 
+before_install: Rscript -e 'source("https://install-github.me/hadley/devtools")'
+
 r:
+ - 3.1.3
  - release
  - devel
  - oldrel
