--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: r
 sudo: false
 cache: packages
 
-before_install: Rscript -e 'source("https://install-github.me/hadley/devtools")'
+r_github_packages:
+  - hadley/devtools
 
 r:
  - 3.1.3
