--- a/inst/DESCRIPTION
+++ b/inst/DESCRIPTION
@@ -7,8 +7,8 @@ Description: Tools to read, write, create, and manipulate DESCRIPTION files.
     It is intented for packages that create or manipulate other packages.
 License: MIT + file LICENSE
 LazyData: true
-URL: https://github.com/r-pkgs/desc
-BugReports: https://github.com/r-pkgs/desc/issues
+URL: https://github.com/r-lib/desc
+BugReports: https://github.com/r-lib/desc/issues
 Suggests: 
     testthat,
     whoami,
