--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(desc_fields)
 export(desc_get)
 export(desc_get_author)
 export(desc_get_authors)
+export(desc_get_built)
 export(desc_get_collate)
 export(desc_get_deps)
 export(desc_get_maintainer)
