--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(check_field,DescriptionOSType)
 S3method(check_field,DescriptionPackage)
 S3method(check_field,DescriptionPackageList)
 S3method(check_field,DescriptionPriority)
+S3method(check_field,DescriptionRemotes)
 S3method(check_field,DescriptionRepoList)
 S3method(check_field,DescriptionRepository)
 S3method(check_field,DescriptionTitle)
@@ -30,6 +31,8 @@ S3method(format,DescriptionAuthorsAtR)
 S3method(format,DescriptionCollate)
 S3method(format,DescriptionDependencyList)
 S3method(format,DescriptionField)
+S3method(format,DescriptionPackageList)
+S3method(format,DescriptionRemotes)
 S3method(toLatex,DescriptionAuthorsAtR)
 S3method(toLatex,DescriptionCollate)
 S3method(toLatex,DescriptionField)
