Add get_field() method, closes #62

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(desc_get_authors)
 export(desc_get_built)
 export(desc_get_collate)
 export(desc_get_deps)
+export(desc_get_field)
 export(desc_get_maintainer)
 export(desc_get_or_fail)
 export(desc_get_remotes)
