--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(dep_types)
 export(desc)
 export(desc_add_author)
 export(desc_add_me)
+export(desc_add_orcid)
 export(desc_add_remotes)
 export(desc_add_role)
 export(desc_add_to_collate)
