--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(cran_valid_fields)
 export(dep_types)
 export(desc)
 export(desc_add_author)
+export(desc_add_author_gh)
 export(desc_add_me)
 export(desc_add_orcid)
 export(desc_add_remotes)
