Add spell checking

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     covr,
     testthat,
     whoami,
-    withr
+    withr,
+    spelling
 Imports:
     assertthat,
     utils,
@@ -60,3 +61,4 @@ Collate:
     'utils.R'
     'validate.R'
     'version.R'
+Language: en-US
