Removes the write() restriction for package archive DESCRIPTIONs.
This commit implements write() functionality for DESCRIPTION files
backed by package archives.

* For zip archives, we can use the replace functionality in zip() to
  update the DESCRIPTION file in-place.

* For tar archives, we must (1) extract the package contents, (2) modify
  the DESCRIPTION file, and then (3) re-archive the result, since tar
  does not support in-place modification.

In addition, this commit updates the docs to remove the restriction and
removes the test that an error would occur if a user tried to call the
write() method.

Known issues:

* The tar archive may not preserve file order and does not preserve
  modification times on directory entries.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,8 @@ importFrom(utils,as.person)
 importFrom(utils,packageName)
 importFrom(utils,person)
 importFrom(utils,tail)
+importFrom(utils,tar)
 importFrom(utils,toLatex)
 importFrom(utils,untar)
 importFrom(utils,unzip)
+importFrom(utils,zip)
