--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(desc_bump_version)
 export(desc_change_maintainer)
 export(desc_clear_remotes)
 export(desc_clear_urls)
+export(desc_coerce_authors_at_r)
 export(desc_del)
 export(desc_del_author)
 export(desc_del_collate)
