Work around a jetpack revdep failure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(R6,R6Class)
 importFrom(crayon,blue)
 importFrom(crayon,red)
 importFrom(crayon,strip_style)
+importFrom(rprojroot,find_root)
 importFrom(utils,as.person)
 importFrom(utils,packageName)
 importFrom(utils,person)
