Fix $add_author() and related in non-UTf-8
deparse() cannot restore UTF-8 strings in
non-UTF-8 locales, so we need to do this
manually.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ BugReports: https://github.com/r-lib/desc/issues
 Depends:
     R (>= 3.1.0)
 Suggests:
+    callr,
     covr,
     testthat,
     whoami,
