--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
 Description: Tools to read, write, create, and manipulate DESCRIPTION files.
     It is intended for packages that create or manipulate other packages.
 License: MIT + file LICENSE
-URL: https://github.com/r-lib/desc#readme
+URL: https://github.com/r-lib/desc#readme,
+    http://r-lib.github.io/desc/
 BugReports: https://github.com/r-lib/desc/issues
 Depends:
     R (>= 3.1.0)
@@ -64,3 +65,4 @@ Collate:
     'version.R'
 Language: en-US
 Config/testthat/edition: 3
+Config/Needs/website: tidyverse/tidytemplate
