--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ BugReports: https://github.com/r-lib/desc/issues
 Depends:
     R (>= 3.1.0)
 Imports:
-    crayon,
+    cli,
     R6,
     rprojroot,
     utils
