Fix RStudio's listing in Authors@R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("Jim", "Hester", , "james.f.hester@gmail.com", role = "aut"),
     person("Maëlle", "Salmon", role = "ctb",
            comment = c(ORCID = "0000-0002-2815-0399")),
-    person("RStudio", role = "cph", "fnd")
+    person("RStudio", role = c("cph", "fnd"))
   )
 Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
 Description: Tools to read, write, create, and manipulate DESCRIPTION
