--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,10 @@
 url: http://r-lib.github.io/desc/
 template:
   bootstrap: 5
-  template: tidytemplate
+  package: tidytemplate
+  includes:
+    in_header: |
+      <script defer data-domain="r-lib.github.io/desc,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
 development:
   mode: auto
