--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Tools to read, write, create, and manipulate DESCRIPTION
     files.  It is intended for packages that create or manipulate other
     packages.
 License: MIT + file LICENSE
-URL: https://github.com/r-lib/desc#readme, http://r-lib.github.io/desc/
+URL: https://github.com/r-lib/desc#readme, https://r-lib.github.io/desc/
 BugReports: https://github.com/r-lib/desc/issues
 Depends:
     R (>= 3.4)
@@ -36,7 +36,7 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 Roxygen: list(r6 = FALSE, load = "installed", markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.1.9000
 Collate: 
     'assertions.R'
     'authors-at-r.R'
