--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,10 +1,10 @@
-url: http://r-lib.github.io/desc/
+url: http://desc.r-lib.org/
 template:
   bootstrap: 5
   package: tidytemplate
   includes:
     in_header: |
-      <script defer data-domain="r-lib.github.io/desc,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
+      <script defer data-domain="desc.r-lib.org/,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
 development:
   mode: auto
