--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(desc_add_me)
 export(desc_add_orcid)
 export(desc_add_remotes)
 export(desc_add_role)
+export(desc_add_ror)
 export(desc_add_to_collate)
 export(desc_add_urls)
 export(desc_bump_version)
